@@ -5,6 +5,7 @@ Bugfixes:
  - LR35902: Fix disassembly of several CB-prefix instructions
 Misc:
  - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
+ - Qt: Improve camera initialization
 
 0.7.1: (2019-02-24)
 Bugfixes:
